--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="footer">
-            <h3>Copyright 2020.<a href="#">haikalzzein</a></h3>
+            <h3>Copyright 2020.<a href="#">sabilq</a></h3>
         </div>
     </div>
 
