--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example</title>
+    <title>SDN 1 Mulyosri</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div class="nav">
             <div class="wrapper">
                 <div class="logo">
-                    <h1><a href="#">Title</a></h1>
+                    <h1><a href="#">SDN 1 Mulyosri</a></h1>
                 </div>
 
                 <div class="nav-menu nav-menu-wide">
@@ -32,7 +32,7 @@
         </div>
 
             <section id="homepage" class="homepage">
-                <h1>Title Homepage</h1>
+                <h1>SDN 1 Mulyosri</h1>
             </section>
         </div>
 
