--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                 <h3>Content</h3>
                 <div class="column-container">
                     <div class="col-1 col-child">
-                        <h4>Column 1</h4>
+                        <h4>Profile Sekolah</h4>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis excepturi sapiente assumenda, quibusdam error dolorum ex placeat. Nesciunt, molestias, repellat nobis deleniti consequuntur tempore odit iste corrupti praesentium, atque accusamus aperiam. Repellendus, quaerat id ratione possimus facere est impedit facilis quis quisquam, cumque totam laudantium. Iusto magni debitis, voluptates expedita neque placeat? Id deleniti nulla doloremque vero reprehenderit suscipit nesciunt, repellendus pariatur sint soluta, optio, dolorum praesentium! Ullam, quia atque!</p>
                     </div>
                     <div class="col-2 col-child">
-                        <h4>Column 2</h4>
+                        <h4>Prakarta Kepala Sekolah</h4>
                     </div>
                     <div class="col-3 col-child">
-                        <h4>Column 3</h4>
+                        <h4>Program Sekolah</h4>
                     </div>
                 </div>
             </section>
