change content & copyright style

--- a/index.html
+++ b/index.html
@@ -38,24 +38,32 @@
 
         <div class="main">
             <section id="content" class="content">
-                <h3>Content</h3>
+                <!-- <h3>Content</h3> -->
                 <div class="column-container">
                     <div class="col-1 col-child">
-                        <h4>Column 1</h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis excepturi sapiente assumenda, quibusdam error dolorum ex placeat. Nesciunt, molestias, repellat nobis deleniti consequuntur tempore odit iste corrupti praesentium, atque accusamus aperiam. Repellendus, quaerat id ratione possimus facere est impedit facilis quis quisquam, cumque totam laudantium. Iusto magni debitis, voluptates expedita neque placeat? Id deleniti nulla doloremque vero reprehenderit suscipit nesciunt, repellendus pariatur sint soluta, optio, dolorum praesentium! Ullam, quia atque!</p>
+                        <h4>Profile Sekolah</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum cum enim amet vero laudantium tenetur at cumque in. Id voluptatibus magnam sit ut, odio, praesentium iste placeat accusamus architecto eaque in quae nulla harum vitae facilis vero porro, odit deserunt ipsam molestias ab! Id, nam fugit! Doloremque porro officia magni?</p>
                     </div>
                     <div class="col-2 col-child">
-                        <h4>Column 2</h4>
+                        <h4>Prakarta Kepala Sekolah</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo delectus quos dolore blanditiis dolor deserunt ut sequi a obcaecati saepe, reprehenderit iure sint expedita. Similique accusamus voluptate dolor id quasi?</p>
                     </div>
                     <div class="col-3 col-child">
-                        <h4>Column 3</h4>
+                        <h4>Program Sekolah</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat veniam voluptatibus ab sapiente excepturi reiciendis at labore delectus. Veritatis repellendus unde reprehenderit. Libero, quod temporibus! Voluptate vel quis exercitationem ab.</p>
                     </div>
                 </div>
             </section>
         </div>
 
         <div class="footer">
-            <h3>Copyright 2020.<a href="#">haikalzzein</a></h3>
+            <div class="sub-menu">
+                <a href="#">Home</a>|
+                <a href="#">Link 1</a>|
+                <a href="#">Link 2</a>|
+                <a href="#">Link 3</a>
+                <p>Copyright 2021</p>
+            </div>
         </div>
     </div>
 
